--- a/ProjectGreen/app/src/main/res/values/strings.xml
+++ b/ProjectGreen/app/src/main/res/values/strings.xml
@@ -4,7 +4,6 @@
     <string name="environment">environment?</string>
     <string name="sign_in">Sign in</string>
     <string name="createAccount">Create an account</string>
-
     <string name="welcomeback">Welcome back</string>
     <string name="loginyouraccount">Log in to your account</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -19,5 +18,17 @@
     <string name="icon_size">30dp</string>
     <string name="points">Points</string>
     <string name="have_an_account">Already have an account?</string>
+    <string name="home">Home</string>
+    <string name="logout">Logout</string>
+    <string name="about_us">About Us</string>
+    <string name="text_description_1">Click to register new recycled materials</string>
+    <string name="open_nav">Open Navigation Drawer</string>
+    <string name="close_nav">Close Navigation Drawer</string>
 
+    <string-array name="materials">
+        <item>Plastic</item>
+        <item>Glass</item>
+        <item>Paper</item>
+        <item>Aluminium</item>
+    </string-array>
 </resources>
