final_project_part1_closed
finished

--- a/ProjectGreen/app/src/main/res/values/strings.xml
+++ b/ProjectGreen/app/src/main/res/values/strings.xml
@@ -35,6 +35,23 @@
     <string name="statistics">Statistics</string>
     <string name="tune_rewards">Tune rewards</string>
     <string name="enter_pieces">Enter pieces</string>
+    <string name="total_recycle_value">Total Recycle Value</string>
+    <string name="leaderboard">Leaderboard</string>
+    <string name="metal">Metal</string>
+    <string name="glass">Glass</string>
+    <string name="paper">Paper</string>
+    <string name="plastic">Plastic</string>
+    <string name="tune_material_value">Tune material value</string>
+    <string name="tune_bonus_by_quantity">Tune bonus by quantity</string>
+    <string name="quantity">Quantity</string>
+    <string name="pieces">pieces</string>
+    <string name="give_bonus_after">Give bonus after</string>
+    <string name="restore_to_defaults">Restore defaults</string>
+    <string name="save_amp_set"><![CDATA[SAVE & SET]]></string>
+    <string name="recycle_value">Recycle value:</string>
+    <string name="material1">Material:</string>
+    <string name="quantity1">:quantity</string>
+    <string name="per_piece_total">$ per piece. Total: </string>
 
     <string-array name="materials">
         <item>Plastic</item>
