--- a/ProjectGreen/app/src/main/res/values/strings.xml
+++ b/ProjectGreen/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">ProjectGreen</string>
-    <string name="environment_care">What is the best for</string>
+    <string name="environment_care">"What's the best for the"</string>
     <string name="environment">environment?</string>
     <string name="sign_in">Sign in</string>
     <string name="createAccount">Create an account</string>
@@ -9,7 +9,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="dont_have_an_account">Don\'t have an account?</string>
     <string name="create_one">Create one</string>
-    <string name="enter_full_name">Your Gmail</string>
+    <string name="enter_full_name">Profile name</string>
     <string name="passwd">Password</string>
     <string name="register">Register</string>
     <string name="create_your_new_acount">Create your new account</string>
