--- a/ProjectGreen/app/src/main/res/values/strings.xml
+++ b/ProjectGreen/app/src/main/res/values/strings.xml
@@ -57,6 +57,7 @@
     <string name="university_of_macedonia_nthessaloniki_greece">University of Macedonia\nThessaloniki Greece</string>
     <string name="GDPR">Due to GDPR law of the European Union, we would like to inform you, any account you create or any action you perform may be saved into Google\'s Firebase Services. Because of that, it would be better to use non personal related information. You can always request you data under the law of the Rights of the Subject. We do not guarantee any integrity or confidentiality of your personal data.</string>
     <string name="great_progress_keep_it_up_to_cash_in_your_available_balance">Great progress! Keep it up to cash in your available balance.</string>
+    <string name="cash_in">Cash in!</string>
 
     <string-array name="materials">
         <item>Plastic</item>
